@@ -1,0 +1,4 @@
+if mods["SchallCircuitGroup"] then
+  data.raw.item["production-combinator"].subgroup = "circuit-input"
+  data.raw.item["consumption-combinator"].subgroup = "circuit-input"
+end
