@@ -1,3 +1,6 @@
 ---------------------------------------------------------------------------------------------------
 Version: 1.0.0
 Date: ????
+  Changes:
+    - [item=production-combinator] Changed subgroup to circuit-input if SchallCircuitGroup mod is present.
+    - [item=consumption-combinator] Changed subgroup to circuit-input if SchallCircuitGroup mod is present.
